# sysfetch-rs

./: .gitignore  Cargo.toml
src/: cli_args.rs  duration_extras.rs  icon_art.rs  info_builder.rs  main.rs  package_counter.rs
