[package]
name = "sysfetch"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = "0.26"
strum_macros = "0.26"
colored = "2.2.0"
lazy_static = "1.5.0"
itertools = "0.13.0"
clap = { version = "4.5.23", features = ["derive", "string"] }
strip-ansi-escapes = "0.2.0"
# Unit conversions and display.
frequency-unit = "=0.2.3"
humansize = "2.1.3"
# Libraries for accessing system info.
sysinfo = "0.33.1"
smbios-lib = "0.9.2"
whoami = "1.5.2"
uptime_lib = "0.3.1"
wgpu = "=22.1.0"
local-ip-address = "0.6.3"